add product page

--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
 
       <!--Category start-->
       <section class="categories">
-        <div class="container">
+        <div class="container section-wapper">
           <div class="cate-heading d-flex justify-content-between flex-wrap align-items-center mb-3 gap-3">
             <div class="c-heading-left d-flex align-items-center gap-2 text-primary">
               <img src="assets/images/category.svg" alt="Category Icon">
@@ -187,7 +187,6 @@
       <section class="product">
         <div class="container">
           <h2 class="title">Our Products</h2>
-      
           <!-- Tabs-->
           <div class="tab-wrapper">
             <ul class="nav nav-tabs tab-scroll" id="productTabs" role="tablist">
@@ -716,15 +715,17 @@
           </div>
       
           <div class="btn1 mt-4 text-center">
-            <button class="btn">Discover More</button>
+            <a href="our-product.html">
+              <button class="btn">Discover More</button>
+            </a>
           </div>
         </div>
       </section>
 <!--products end-->
 
 <!--Subscription plan section start-->
-      <section class="Subscription">
-        <div class="container">
+      <section class="Subscription section-wapper">
+        <div class="container section-wapper">
           <div class="sub-title text-center">
             <h2 class="title">Fisunic Subscription</h2>
             <p>Cutting-edge physiotherapy equipment: Empowering recovery and enhancing mobility for optimal rehabilitation.
@@ -1046,8 +1047,8 @@
 
       <!--company start-->
       <section class="categories">
-        <div class="container">
-          <div class="cate-heading d-flex justify-content-between flex-wrap align-items-center gap-5">
+        <div class="container section-wapper">
+          <div class="cate-heading d-flex justify-content-between flex-wrap align-items-center gap-3">
             <div class="c-heading-left d-flex align-items-center gap-2 text-primary">
               <img src="assets/images/category.svg" alt="Category Icon">
               <h5 class="mb-0">Browse By Brands</h5>
@@ -1118,7 +1119,7 @@
       <!--client section start-->
       <section class="client">
         <div class="container">
-          <h2 class="title">What Our Client Says</h2>
+          <h2 class="title section-wapper">What Our Client Says</h2>
           <div class="swiper clientSwiper">
             <div class="swiper-wrapper">
               <div class="swiper-slide">
@@ -1193,7 +1194,7 @@
 
       <!--company section start-->
       <section class="company-section">
-        <div class="container my-3">
+        <div class="container section-wapper">
           <div class="company d-flex flex-column flex-md-row justify-content-between align-items-center gap-4">
             <div class="company-col1 text-center text-md-start d-flex gap-3">
               <img src="assets/images/category.svg" alt="Category Icon">
