changes in some pages

--- a/our-product.html
+++ b/our-product.html
@@ -18,7 +18,7 @@
 <body>
     <!--header start-->
     <header class="border-bottom header">
-      <div class="container">
+      <div class="container-xl">
         <div class="header-row row align-items-center g-3">
           <!-- Logo -->
           <div class="header-col col-6 col-md-2">
@@ -65,45 +65,44 @@
 
     <!--nav start-->
     <section class="nav">
-        <div class="container">
+      <div class="container-xl">
         <nav class="navbar navbar-expand-lg">
-            <div class="container-fluid">
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#mainNavbar" aria-controls="mainNavbar" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
+          <div class="container-xl">
+            <button class="navbar-toggler d-block d-flex align-items-center" type="button" data-bs-toggle="collapse" data-bs-target="#mainNavbar" aria-controls="mainNavbar" aria-expanded="false" aria-label="Toggle navigation">
+              <span class="navbar-toggler-icon"></span>
             </button>
 
             <div class="collapse navbar-collapse my-3" id="mainNavbar">
-                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+              <ul class="navbar-nav me-auto mb-lg-0">
                 <li class="nav-item">
-                    <a class="nav-link active" href="#">All Categories</a>
+                  <a class="nav-link active" href="#">All Categories</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Blog</a>
+                  <a class="nav-link" href="#">Blog</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Contact Us</a>
+                  <a class="nav-link" href="#">Contact Us</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">About Us</a>
+                  <a class="nav-link" href="#">About Us</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Return and Payment</a>
+                  <a class="nav-link" href="#">Return and Payment</a>
                 </li>
-                </ul>
-                <div class="d-flex align-items-center">
+              </ul>
+              <div class="d-flex align-items-center">
                 <img src="assets/images/delete-Buttons.svg" alt="delete-btn" style="cursor: pointer;">
-                </div>
+              </div>
             </div>
-            </div>
+          </div>
         </nav>
-        </div>
-    </section>
-    <!--nav end-->
+      </div>
+    </section>    <!--nav end-->
 
     <!--title start-->
     <section class="pro-title">
-        <div class="container">
-            <h2>Our Products</h2>
+        <div class="container-xl text-center">
+            <h2 class="page-title m-0 p-0">Our Products</h2>
             <img src="assets/images/our-product-images/title-line.svg" alt="line image">
             <div class="direction d-flex justify-content-center">
                 <a href="index.html">Home</a>
@@ -116,15 +115,15 @@
 
     <!--main section start-->
 
-    <section class="pro-main">
-        <div class="container">
-            <div class="my-5">
+    <section class="pro-main section-wapper">
+        <div class="container-xl">
+            <div class="">
                 <div class="row">
                   <!-- Sidebar Filters -->
                   <div class="col-lg-3 mb-4">
                       <div class="pro-left-upper-card d-flex justify-content-between align-items-center">
                         <h5 class="">Filters</h5>
-                        <button class="btn1">Clear All</button>
+                        <button type="button" class="btn Clear-btn m-0">Clear All</button>
                       </div>
               
                       <!-- Category -->
@@ -318,7 +317,7 @@
             <!-- Product Grid -->
             <div class="col-lg-9 pro-right-card">
 
-              <div class="d-flex flex-wrap justify-content-between align-items-center mt-4 gap-3">
+              <div class="d-flex flex-wrap justify-content-between align-items-center gap-3">
                 <p class="mb-0 pro-right-text">Showing 12 Results from total 230</p>
                 <div class="dropdown d-flex">
                   <span class="mx-2">Sort by: </span>
@@ -338,8 +337,10 @@
                           <img src="assets/images/our-product-images/pro-card-img-1.svg" class="card-img-top" alt="Top Image" width="262px" height="275px">
                           <div class="card-hover d-flex align-items-center justify-content-center">
                            <div class="hover-btn">
-                             <button class="h-btn1">Add to cart</button>
-                             <button class="h-btn2">Rent Now</button>
+                            <button class="btn btn-light h-btn1">Add to cart</button>
+                             <a href="product-details.html">
+                              <button class="btn btn-outline-light h-btn2">Rent Now</button>
+                            </a>
                            </div>
                          </div>
                           <div class="card-body d-flex flex-column">
@@ -356,8 +357,8 @@
                            <img src="assets/images/product2.svg" class="card-img-top" alt="Top Image" width="262px" height="275px">
                            <div class="card-hover d-flex align-items-center justify-content-center">
                              <div class="hover-btn">
-                               <button class="h-btn1">Add to cart</button>
-                               <button class="h-btn2">Rent Now</button>
+                       <button class="btn btn-light h-btn1">Add to cart</button>
+                       <button class="btn btn-outline-light h-btn2">Rent Now</button>
                              </div>
                            </div>
                            <div class="card-body d-flex flex-column">
@@ -379,8 +380,8 @@
                              <img src="assets/images/starts-number.svg" alt="Bottom Image" class="img-fluid" width="117px" height="17px">
                              <div class="card-hover d-flex align-items-center justify-content-center">
                                <div class="hover-btn">
-                                 <button class="h-btn1">Add to cart</button>
-                                 <button class="h-btn2">Rent Now</button>
+                                <button class="btn btn-light h-btn1">Add to cart</button>
+                                <button class="btn btn-outline-light h-btn2">Rent Now</button>
                                </div>
                              </div>
                            </div>
@@ -398,8 +399,8 @@
                            </div>
                            <div class="card-hover d-flex align-items-center justify-content-center">
                              <div class="hover-btn">
-                               <button class="h-btn1">Add to cart</button>
-                               <button class="h-btn2">Rent Now</button>
+                       <button class="btn btn-light h-btn1">Add to cart</button>
+                       <button class="btn btn-outline-light h-btn2">Rent Now</button>
                              </div>
                            </div>
                          </div>
@@ -416,8 +417,8 @@
                            </div>
                            <div class="card-hover d-flex align-items-center justify-content-center">
                              <div class="hover-btn">
-                               <button class="h-btn1">Add to cart</button>
-                               <button class="h-btn2">Rent Now</button>
+                       <button class="btn btn-light h-btn1">Add to cart</button>
+                       <button class="btn btn-outline-light h-btn2">Rent Now</button>
                              </div>
                            </div>
                          </div>
@@ -434,8 +435,8 @@
                            </div>
                            <div class="card-hover d-flex align-items-center justify-content-center">
                              <div class="hover-btn">
-                               <button class="h-btn1">Add to cart</button>
-                               <button class="h-btn2">Rent Now</button>
+                       <button class="btn btn-light h-btn1">Add to cart</button>
+                       <button class="btn btn-outline-light h-btn2">Rent Now</button>
                              </div>
                            </div>
                          </div>
@@ -452,8 +453,8 @@
                            </div>
                            <div class="card-hover d-flex align-items-center justify-content-center">
                              <div class="hover-btn">
-                               <button class="h-btn1">Add to cart</button>
-                               <button class="h-btn2">Rent Now</button>
+                       <button class="btn btn-light h-btn1">Add to cart</button>
+                       <button class="btn btn-outline-light h-btn2">Rent Now</button>
                              </div>
                            </div>
                          </div>
@@ -469,8 +470,8 @@
                             <img src="assets/images/starts-number.svg" alt="Bottom Image" class="img-fluid" width="117px" height="17px">
                             <div class="card-hover d-flex align-items-center justify-content-center">
                               <div class="hover-btn">
-                                <button class="h-btn1">Add to cart</button>
-                                <button class="h-btn2">Rent Now</button>
+                                <button class="btn btn-light h-btn1">Add to cart</button>
+                                <button class="btn btn-outline-light h-btn2">Rent Now</button>
                               </div>
                             </div>
                           </div>
@@ -487,8 +488,8 @@
                           <img src="assets/images/starts-number.svg" alt="Bottom Image" class="img-fluid" width="117px" height="17px">
                           <div class="card-hover d-flex align-items-center justify-content-center">
                             <div class="hover-btn">
-                              <button class="h-btn1">Add to cart</button>
-                              <button class="h-btn2">Rent Now</button>
+                              <button class="btn btn-light h-btn1">Add to cart</button>
+                              <button class="btn btn-outline-light h-btn2">Rent Now</button>
                             </div>
                           </div>
                         </div>
@@ -506,8 +507,8 @@
                           </div>
                           <div class="card-hover d-flex align-items-center justify-content-center">
                             <div class="hover-btn">
-                              <button class="h-btn1">Add to cart</button>
-                              <button class="h-btn2">Rent Now</button>
+                              <button class="btn btn-light h-btn1">Add to cart</button>
+                              <button class="btn btn-outline-light h-btn2">Rent Now</button>
                             </div>
                           </div>
                         </div>
@@ -524,8 +525,8 @@
                           </div>
                           <div class="card-hover d-flex align-items-center justify-content-center">
                             <div class="hover-btn">
-                              <button class="h-btn1">Add to cart</button>
-                              <button class="h-btn2">Rent Now</button>
+                              <button class="btn btn-light h-btn1">Add to cart</button>
+                              <button class="btn btn-outline-light h-btn2">Rent Now</button>
                             </div>
                           </div>
                         </div>
@@ -541,8 +542,8 @@
                             <img src="assets/images/starts-number.svg" alt="Bottom Image" class="img-fluid" width="117px" height="17px">
                             <div class="card-hover d-flex align-items-center justify-content-center">
                               <div class="hover-btn">
-                                <button class="h-btn1">Add to cart</button>
-                                <button class="h-btn2">Rent Now</button>
+                                <button class="btn btn-light h-btn1">Add to cart</button>
+                                <button class="btn btn-outline-light h-btn2">Rent Now</button>
                               </div>
                             </div>
                           </div>
@@ -552,7 +553,7 @@
 
                     <!--pagination-->
                     <nav aria-label="Page navigation example">
-                      <ul class="pagination custom-pagination">
+                      <ul class="pagination custom-pagination d-flex gap-2 justify-content-center">
                         <li class="page-item">
                           <a class="page-link" href="#" aria-label="Previous">
                             <span aria-hidden="true">&laquo;</span>
@@ -581,7 +582,7 @@
 
     <!--footer start-->
     <footer>
-      <div class="container">
+      <div class="container-xl">
         <div class="footer-upper row justify-content-center align-items-center">
           <div class="footer-upper-left col-12 col-md-6 mb-3 mb-md-0">
             <h3>NewsLetter</h3>
