--- a/our-product.html
+++ b/our-product.html
@@ -66,38 +66,37 @@
     <!--nav start-->
     <section class="nav">
       <div class="container-xl">
-        <nav class="navbar navbar-expand-lg">
-          <div class="container-xl">
-            <button class="navbar-toggler d-block d-flex align-items-center" type="button" data-bs-toggle="collapse" data-bs-target="#mainNavbar" aria-controls="mainNavbar" aria-expanded="false" aria-label="Toggle navigation">
-              <span class="navbar-toggler-icon"></span>
-            </button>
-
-            <div class="collapse navbar-collapse my-3" id="mainNavbar">
-              <ul class="navbar-nav me-auto mb-lg-0">
-                <li class="nav-item">
-                  <a class="nav-link active" href="#">All Categories</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="#">Blog</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="#">Contact Us</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="#">About Us</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="#">Return and Payment</a>
-                </li>
-              </ul>
-              <div class="d-flex align-items-center">
-                <img src="assets/images/delete-Buttons.svg" alt="delete-btn" style="cursor: pointer;">
-              </div>
-            </div>
+      <nav class="navbar navbar-expand-lg">
+        <button class="navbar-toggler d-flex align-items-center" type="button" data-bs-toggle="collapse" data-bs-target="#mainNavbar" aria-controls="mainNavbar" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+    
+        <div class="collapse navbar-collapse my-3" id="mainNavbar">
+          <ul class="navbar-nav me-auto mb-lg-0">
+            <li class="nav-item">
+              <a class="nav-link active" href="#">All Categories</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Blog</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Contact Us</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">About Us</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Return and Payment</a>
+            </li>
+          </ul>
+          <div class="d-flex align-items-center">
+            <img src="assets/images/delete-Buttons.svg" alt="delete-btn" style="cursor: pointer;">
           </div>
-        </nav>
+        </div>
+      </nav>
       </div>
-    </section>    <!--nav end-->
+    </section>
+     <!--nav end-->
 
     <!--title start-->
     <section class="pro-title">
