--- a/product-details.html
+++ b/product-details.html
@@ -66,43 +66,41 @@
       <!--nav start-->
       <section class="nav">
         <div class="container-xl">
-          <nav class="navbar navbar-expand-lg">
-            <div class="container-xl">
-              <button class="navbar-toggler d-block d-flex align-items-center" type="button" data-bs-toggle="collapse" data-bs-target="#mainNavbar" aria-controls="mainNavbar" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-              </button>
-
-              <div class="collapse navbar-collapse my-3" id="mainNavbar">
-                <ul class="navbar-nav me-auto mb-lg-0">
-                  <li class="nav-item">
-                    <a class="nav-link active" href="#">All Categories</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="#">Blog</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="#">Contact Us</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="#">About Us</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="#">Return and Payment</a>
-                  </li>
-                </ul>
-                <div class="d-flex align-items-center">
-                  <img src="assets/images/delete-Buttons.svg" alt="delete-btn" style="cursor: pointer;">
-                </div>
-              </div>
+        <nav class="navbar navbar-expand-lg">
+          <button class="navbar-toggler d-flex align-items-center" type="button" data-bs-toggle="collapse" data-bs-target="#mainNavbar" aria-controls="mainNavbar" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+      
+          <div class="collapse navbar-collapse my-3" id="mainNavbar">
+            <ul class="navbar-nav me-auto mb-lg-0">
+              <li class="nav-item">
+                <a class="nav-link active" href="#">All Categories</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">Blog</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">Contact Us</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">About Us</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">Return and Payment</a>
+              </li>
+            </ul>
+            <div class="d-flex align-items-center">
+              <img src="assets/images/delete-Buttons.svg" alt="delete-btn" style="cursor: pointer;">
             </div>
-          </nav>
+          </div>
+        </nav>
         </div>
       </section>
      <!--nav end-->
     <!--title start-->
     <section class="pro-title">
         <div class="container-xl text-center">
-            <h2>Lorem Ipsum</h2>
+            <h2 class="page-title m-0 p-0">Lorem Ipsum</h2>
             <img src="assets/images/our-product-images/title-line.svg" alt="line image">
             <div class="direction d-flex justify-content-center">
                 <a href="index.html">Home</a>
@@ -182,10 +180,10 @@
                 <div class="controls d-flex gap-3 flex-wrap">
                   <div class="quantity">
                     <label class="price-label pro-info2">Quantity</label>
-                    <div class="quantity-selector">
-                      <button class="qty-btn">−</button>
-                      <span class="qty-value pro-info2">2</span>
-                      <button class="qty-btn">+</button>
+                    <div class="quantity-selector d-flex align-items-center text-center style" style="width: 122px; height: 44px;">
+                      <button class="btn1 btn-outline-secondary minus-btn" type="button">−</button>
+                        <input type="text" class="form-control text-center quantity-input border-0" value="2">
+                      <button class="btn1 btn-outline-secondary plus-btn" type="button">+</button>
                     </div>
                   </div>
       
