changes in code

--- a/cart.html
+++ b/cart.html
@@ -209,7 +209,7 @@
                     <p class="cart-text text-primary">$678.00</p>
                   </div>
 
-                  <button class="btn w-100 btn-primary fill-btn" data-bs-toggle="modal" data-bs-target="#registerModal">
+                  <button class="btn w-100 btn-primary" data-bs-toggle="modal" data-bs-target="#registerModal">
                     Proceed to checkout
                   </button>
                 </div>
@@ -337,7 +337,7 @@
             </label>
           </div>
 
-          <button type="submit" class="btn btn-primary w-100 mb-3 fill-btn">Register</button>
+          <button type="submit" class="btn btn-primary w-100 mb-3">Register</button>
 
           <p class="text-center form-label">
             Already have an account?
