--- a/check-out.html
+++ b/check-out.html
@@ -138,7 +138,7 @@
                 <input type="password" class="form-control password-field" id="password" placeholder="Enter Password" required>
                 <i class="fa-solid fa-eye position-absolute end-0 top-50 translate-middle-y me-3" data-target="#password" style="cursor:pointer;"></i>
               </div>
-              <button type="submit" class="btn btn-primary fill-btn w-100 mb-3">Login</button>
+              <button type="submit" class="btn btn-primary w-100 mb-3">Login</button>
               <p class="text-center form-label mt-3">
                 Don't have an account?
                 <a href="#" class="text-decoration-underline" data-bs-toggle="modal" data-bs-target="#registerModal" data-bs-dismiss="modal">Register</a>
