--- a/shipping-page.html
+++ b/shipping-page.html
@@ -231,7 +231,7 @@
                 </select>
               </div>
             </div>
-            <button type="submit" class="btn btn-primary fill-btn w-100 mb-3">Continue to Payment</button>
+            <button type="submit" class="btn btn-primary w-100 mb-3">Continue to Payment</button>
           </div>
 
 
