--- a/account-page.html
+++ b/account-page.html
@@ -119,11 +119,10 @@
 
                 <!-- Sidebar -->
                 <div class="col-lg-3">
-                  <div class="">
                     <ul class="nav flex-column">
                       <li class="nav-item fs-5 check-title mb-0 p-4">Manage Profile</li>
                       <hr class="mt-2">
-                      <li class="nav-item"><a href="#" class="nav-link">Order History</a></li>
+                      <li class="nav-item"><a href="order-history.html" class="nav-link">Order History</a></li>
                       <li class="nav-item"><a href="#" class="nav-link">Rented Order History</a></li>
                       <li class="nav-item"><a href="#" class="nav-link">Subscribed Plan</a></li>
                       <li class="nav-item"><a href="#" class="nav-link">Manage Cards</a></li>
@@ -135,7 +134,6 @@
                     <div class="mt-2">
                       <button class="btn btn-outline-primary w-100">Logout</button>
                     </div>
-                  </div>
                 </div>
             
                 <!-- Profile Form -->
@@ -192,7 +190,7 @@
                       </div>
             
                       <div class="text-center mt-4">
-                        <button type="submit" class="btn btn-primary fill-btn w-100">Submit</button>
+                        <button type="submit" class="btn btn-primary w-100">Submit</button>
                       </div>
                     </form>
                 </div>
