--- a/product-details.html
+++ b/product-details.html
@@ -202,7 +202,7 @@
                 <a href="cart.html" class="btn btn-outline-primary flex-fill text-center">Add to Cart</a>
                 <a href="cart.html" class="btn btn-outline-primary flex-fill text-center">Rent now</a>
               </div>              
-              <button type="button" class="btn btn-primary w-100 fill-btn mt-3">Buy Now</button>
+              <button type="button" class="btn btn-primary w-100 mt-3">Buy Now</button>
           </div>
         </div>
       </div>
