changes in code

--- a/product-details.html
+++ b/product-details.html
@@ -124,7 +124,7 @@
                 <div class="swiper mySwiper">
                   <div class="swiper-wrapper">
                     <div class="swiper-slide">
-                      <img src="assets/images/product-details-image/d-slider4.svg" alt="Image 1">
+                      <img src="assets/images/product1.svg" alt="Image 1">
                     </div>
                     <div class="swiper-slide">
                       <img src="assets/images/product-details-image/d-slider2.svg" alt="Image 2">
@@ -136,7 +136,7 @@
                       <img src="assets/images/product-details-image/d-slider4.svg" alt="Image 4">
                     </div>
                     <div class="swiper-slide">
-                      <img src="assets/images/product-details-image/d-slider3.svg" alt="Image 5">
+                      <img src="assets/images/product1.svg" alt="Image 5">
                     </div>
                     <div class="swiper-slide">
                       <img src="assets/images/product-details-image/d-slider2.svg" alt="Image 6">
