--- a/order-history.html
+++ b/order-history.html
@@ -117,8 +117,8 @@
         <div class="container-xl">
             <div class="row g-4 d-flex justify-content-between">
 
-              <button class="btn btn-outline-primary d-lg-none w-25" type="button" data-bs-toggle="collapse" data-bs-target="#accountSidebar" aria-expanded="false" aria-controls="accountSidebar">
-                <i class="fa fa-bars me-1"></i> Menu
+              <button class="btn btn-outline-primary d-lg-none w-25 ms-3 p-2" type="button" data-bs-toggle="collapse" data-bs-target="#accountSidebar" aria-expanded="false" aria-controls="accountSidebar">
+                <i class="fa fa-bars me-1"></i>Menu
               </button>
               <!-- Sidebar -->
               <div class="collapse d-lg-block col-lg-3" id="accountSidebar">
